@@ -1,4 +1,4 @@
-#' Select matching pairs with a score above a threshold
+#' Select matching pairs with a score above or equal to a threshold
 #'
 #' @param pairs a \code{pairs} object, such as generated by 
 #'   \code{\link{pair_blocking}}
@@ -6,7 +6,7 @@
 #'   logical variable with a value of \code{TRUE} for the selected pairs.
 #' @param score name of the score/weight variable of the pairs. When not given
 #'   and \code{attr(pairs, "score")} is defined, that is used. 
-#' @param threshold the threshold to apply. Pairs with a score above the 
+#' @param threshold the threshold to apply. Pairs with a score above or equal to the 
 #'   threshold are selected. 
 #' @param inplace logical indicating whether \code{pairs} should be modified in place. When
 #'   pairs is large this can be more efficient.
@@ -59,9 +59,9 @@ select_threshold.pairs <- function(pairs, variable, score, threshold,
     score <- pairs[[score]]
   }
   if (inplace) {
-    pairs[, (variable) := ..score > ..threshold]
+    pairs[, (variable) := ..score >= ..threshold]
   } else {
-    pairs[[variable]] <- score > threshold
+    pairs[[variable]] <- score >= threshold
   }
   if (inplace) invisible(pairs) else pairs
 }
